--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,20 @@
 {
-	"name": "cedaro/dequeue-jquery-migrate",
+	"name": "girardmedia/jmigrate-fix",
 	"description": "A WordPress plugin to remove the jquery-migrate.js script dependency.",
 	"keywords": ["wordpress"],
 	"type": "wordpress-plugin",
-	"homepage": "https://github.com/cedaro/dequeue-jquery-migrate",
+	"homepage": "https://github.com/girardmedia/jmigrate-fix",
 	"license": "GPL-2.0+",
 	"authors": [
 		{
-			"name": "Brady Vercher",
-			"email": "brady@blazersix.com",
-			"homepage": "http://www.cedaro.com/"
+			"name": "Sevak Girard",
+			"email": "sg@girardmedia.com",
+			"homepage": "https://girardmedia.com/"
 		}
 	],
 	"support": {
-		"issues": "https://github.com/cedaro/dequeue-jquery-migrate/issues",
-		"source": "https://github.com/cedaro/dequeue-jquery-migrate"
+		"issues": "https://github.com/girardmedia/jmigrate-fix/issues",
+		"source": "https://github.com/girardmedia/jmigrate-fix"
 	},
 	"require": {
 		"composer/installers": "~1.0"
